Allow AVX-512 instructions when jdks are bundled with distributions (#1517)
Allow AVX-512 instructions when jdks are bundled with distributions